--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,19 @@
-.eunit
+_*
 deps
+.rebar3
+.eunit
 *.o
 *.beam
 *.plt
+*.swp
+*.swo
+.erlang.cookie
+ebin
+log
 erl_crash.dump
-ebin/*.beam
-rel/example_project
-.concrete/DEV_MODE
 .rebar
+logs
+_build
+.idea
+*.iml
+rebar3.crashdump
