Fix remote IP address format for Telnet and SNMP

--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,22 @@
 _*
-deps
-.rebar3
+.erlang.cookie
 .eunit
-*.o
+.idea
+.rebar
+.rebar3
 *.beam
+*.iml
 *.plt
+*.o
 *.swp
 *.swo
-.erlang.cookie
-ebin
-log
-erl_crash.dump
-.rebar
-logs
+*.log
+*.log.*
 _build
-.idea
-*.iml
+deps
+ebin
+erl_crash.dump
+log
+logs
 rebar3.crashdump
+snmpm_config_db
