--- a/rebar.config
+++ b/rebar.config
@@ -1,6 +1,8 @@
 {erl_opts, [debug_info, {parse_transform, lager_transform}, {lager_extra_sinks, [audit]}]}.
 {deps, [
-  {lager, ".*", {git, "https://github.com/erlang-lager/lager", {tag, "3.6.5"}}}
+  {lager, ".*", {git, "https://github.com/erlang-lager/lager", {tag, "3.6.5"}}},
+  {cowboy, ".*", {git, "https://github.com/ninenines/cowboy", {tag, "2.4.0"}}},
+  {hackney, ".*", {git, "https://github.com/benoitc/hackney", {tag, "1.14.0"}}}
 ]}.
 
 {shell, [
