Enhance: Increase lager log message rate

--- a/app.config
+++ b/app.config
@@ -1,4 +1,5 @@
 [{lager, [
+    {error_logger_hwm, 1024},
     {handlers, [
         {lager_console_backend, [{level, info}]},
         {lager_file_backend, [{file, "system.log"}, {level, debug}]}
